Minor changes * Truncate issues description * Change issues order (to desc) * Remove shared links from sign in * App shows a msg if plate does not exist creating an issue

--- a/app/assets/stylesheets/_reset.css.scss
+++ b/app/assets/stylesheets/_reset.css.scss
@@ -18,7 +18,6 @@ time, mark, audio, video {
   font: inherit;
   vertical-align: baseline;
   box-sizing: border-box;
-  font-family: 'Bitter', serif;
 }
 
 
